--- a/week-8/assignment8.2.html
+++ b/week-8/assignment8.2.html
@@ -60,7 +60,7 @@
                   </div>
                 </div>
                 <div class="form-group">
-                  <label for="txtEmployeeList">Shopping Cart: </label>
+                  <label for="txtEmployeeList">Employee List: </label>
                   <select
                   size="10"
                   class="form-control"
